@@ -1,3 +1,9 @@
+2001-09-24   Daiki Ueno  <ueno@unixuser.org>
+
+	* mime-view.el (mime-preview-toggle-display): When both "type" and
+	"*type" conditions are not specified, the entity should be regarded
+	as invisible.
+
 2004-09-27  Yoichi NAKAYAMA  <yoichi@geiin.org>
 
 	* mime-edit.el (mime-edit-temp-message-buffer): Define.
